ext/frc42_dispatch/macros/tests/naming/non-capital-start.stderr
error: proc macro panicked
  --> tests/naming/non-capital-start.rs:12:18
   |
12 |     let _str_hash = method_hash!("noPlaceForCamelCase");
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: called `Result::unwrap()` on an `Err` value: IllegalName(NotValidStart)
